#fix -- alignment in numbered heading ::before pseudo-elem

--- a/styles/default.sass
+++ b/styles/default.sass
@@ -7,7 +7,8 @@
 
 html
   box-sizing: border-box
-  width: 100%
+  height: 100vh
+  overflow-y: scroll
   scroll-behavior: smooth
 
 *, *::before, *::after
@@ -63,8 +64,9 @@ body
   width: 100%
   // height: 100vh
   // overflow-x: scroll
-  min-height: 100%
-  overflow-x: hidden
+  // min-height: 100%
+  // overflow-x: hidden
+  height: fit-content
   -moz-osx-font-smoothing: grayscale
   -webkit-font-smoothing: antialiased
   background-color: colors.color("background")
